--- a/assets/css/partners.css
+++ b/assets/css/partners.css
@@ -40,6 +40,3 @@
 .partner-name {
     font-size: 0.85em;
 }
-{
-    font-size: 0.85em;
-}
